@@ -6,7 +6,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.2'
+    classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
   }
 }
 
@@ -44,6 +44,10 @@ allprojects {
     osgiVersion = '6.0.0'
     jettyVersion = '8.1.14.v20131031'
     hadoopVersion = '2.4.1'
+    protobufVersion = '2.6.1'
+    jerseyVersion = '1.9'
+    hadoopJettyVersion = '6.1.26'
+    jsr305Version = '1.3.9'
     hbaseVersion = '0.94.27'
     derbyVersion = '10.10.2.0'
     //hbaseVersion = '0.94.4-gemfire-r45047'
@@ -51,25 +55,29 @@ allprojects {
     //hadoopVersion = '2.4.1-gphd-3.2.0.0-54'
 
     // product and release properties
-    PRODUCT_NAME = 'GemFireXD'
-    PRODUCT_NAME_FULL = "Pivotal ${PRODUCT_NAME}"
+    PRODUCT_NAME = 'SnappyData'
 
     GEMFIRE_PRODUCT = 'Pivotal GemFire'
     GEMFIRE_VERSION = '7.5.Beta'
+    DERBY_NAME = 'Apache Derby'
+    DERBY_MAJOR = '10'
+    DERBY_MINOR = '4'
+    DERBY_MAINT = '2000000'
+    DERBY_DRDA_MAINT = '1'
 
     PRODUCT_MAJOR = '2'
     PRODUCT_MINOR = '0'
-    PRODUCT_MAINT = 'SNAPSHOT.1'
+    PRODUCT_MAINT = 'BETA'
     PRODUCT_VERSION = "${PRODUCT_MAJOR}.${PRODUCT_MINOR}-${PRODUCT_MAINT}"
-    PRODUCT_VENDOR = 'Pivotal Software, Inc.'
-    COPYRIGHT = "Copyright 1997-2015, ${PRODUCT_VENDOR} All rights reserved."
+    PRODUCT_VENDOR = 'SnappyData, Inc.'
+    COPYRIGHT = "Copyright 2016, ${PRODUCT_VENDOR} All rights reserved."
 
-    if (rootProject.name == 'gemfirexd-oss') {
+    if (rootProject.name == 'snappy-store') {
       subprojectBase = ':'
       gitCmd = "git --git-dir=${rootDir}/.git --work-tree=${rootDir}"
     } else {
-      subprojectBase = ':gemfirexd-oss:'
-      gitCmd = "git --git-dir=${project(':gemfirexd-oss').projectDir}/.git --work-tree=${project(':gemfirexd-oss').projectDir}"
+      subprojectBase = ':snappy-store:'
+      gitCmd = "git --git-dir=${project(':snappy-store').projectDir}/.git --work-tree=${project(':snappy-store').projectDir}"
     }
 
     gitBranch = "${gitCmd} rev-parse --abbrev-ref HEAD".execute().text.trim()
@@ -82,10 +90,21 @@ allprojects {
     buildDate = new Date().format('yyyy-MM-dd HH:mm:ss Z')
     buildNumber = new Date().format('MMddyy')
     jdkVersion = System.getProperty('java.version')
+
+    derbyProps = [ 'gemfirexd.version.major': DERBY_MAJOR,
+        'gemfirexd.version.minor': DERBY_MINOR,
+        'gemfirexd.version.maint': DERBY_MAINT,
+        'gemfirexd.version.drdamaint': DERBY_DRDA_MAINT,
+        'gemfirexd.build.number': '1',
+        'gemfirexd.product.external.name': DERBY_NAME,
+        'gemfirexd.product.external.version': "${DERBY_MAJOR}.${DERBY_MINOR}.${DERBY_MAINT}",
+        'gemfirexd.version.beta': 'true',
+        'gemfirexd.product.vendor': PRODUCT_VENDOR,
+        'gemfirexd.product.file': 'gemfirexd.jar' ]
   }
 
   buildRoot = buildRoot.trim()
-  def osDir = osName.getFamilyName().toLowerCase()
+  def osDir = osName.getFamilyName().replace(" ", "").toLowerCase()
   if (!buildRoot.isEmpty()) {
     buildDir = new File(buildRoot, osDir + '/' +  project.path.replace(':', '/'))
   } else {
@@ -93,14 +112,23 @@ allprojects {
   }
 
   ext {
-    if (rootProject.name == 'gemfirexd-oss') {
+    productDir = file("${rootProject.buildDir}/store")
+    locDir = 'com/pivotal/gemfirexd/internal/loc'
+    clientMsgOutDir = "${project(subprojectBase + 'gemfirexd-core').buildDir}/client/${locDir}"
+    if (!project.hasProperty("sanity")) {
+      isSane = 'true'
+    } else {
+      isSane = sanity
+    }
+
+    if (rootProject.name == 'snappy-store') {
       testResultsBase = "${rootProject.buildDir}/tests"
     } else {
-      testResultsBase = "${rootProject.buildDir}/tests/gfxd"
+      testResultsBase = "${rootProject.buildDir}/tests/store"
     }
   }
 
-  group = 'org.pivotal.gemfirexd'
+  group = 'io.snappydata'
   version = PRODUCT_VERSION
 
   apply plugin: 'java'
@@ -134,7 +162,7 @@ def getManifest(def symname, def imports, def exports, def otherAttrs) {
   def attrs = [
     "Manifest-Version"        : "1.0",
     "Title"                   : PRODUCT_NAME,
-    "Bundle-Name"             : "${PRODUCT_NAME_FULL} ${PRODUCT_VERSION}",
+    "Bundle-Name"             : "${PRODUCT_NAME} ${PRODUCT_VERSION}",
     "Bundle-Version"          : PRODUCT_VERSION,
     "Bundle-Vendor"           : PRODUCT_VENDOR,
     "Bundle-SymbolicName"     : symname,
@@ -172,6 +200,11 @@ def replaceRegex(def fileDir, def fileName, def regex, def replacement) {
   file("${tmpDir}/${fileName}").renameTo(file(filePath))
 }
 
+def getProcessId() {
+  def name = java.lang.mangement.ManagementFactory.getRuntimeMXBean().getName()
+  return name[0..name.indexOf("@") - 1]
+}
+
 def getStackTrace(def t) {
   java.io.StringWriter sw = new java.io.StringWriter()
   java.io.PrintWriter pw = new java.io.PrintWriter(sw)
@@ -179,19 +212,39 @@ def getStackTrace(def t) {
   return sw.toString()
 }
 
-task cleanStoreJUnit << {
-  def workingDir = "${testResultsBase}/junit"
-  delete workingDir
-  file(workingDir).mkdirs()
+task cleanTestOutput << {
+  def testDir = "${testResultsBase}/junit"
+  delete testDir
+  file(testDir).mkdirs()
+}
+task cleanDUnitOutput << {
+  def testDir = "${testResultsBase}/dunit"
+  delete testDir
+  file(testDir).mkdirs()
+  // writeTestProperties(testDir, '.')
+}
+task cleanIntegrationOutput << {
+  def testDir = "${testResultsBase}/integration"
+  delete testDir
+  file(testDir).mkdirs()
 }
 
 subprojects {
   // apply compiler options
-  sourceCompatibility = 1.7
-  targetCompatibility = 1.7
-
   compileJava.options.encoding = 'UTF-8'
-  javadoc.options.charSet = 'UTF-8'
+
+  javadoc {
+    options {
+      charSet = 'UTF-8'
+      windowTitle = 'GemFire XD Java API Documentation'
+      docTitle = "<h1>GemFire XD ${project.version} Java API</h1>"
+      header = "<i>GemFire XD ${project.version}</i>"
+      bottom = '<i>Copyright &copy; 2010-2015 Pivotal Software, Inc. All rights reserved.</i>'
+      use = true
+      links = [ 'http://docs.oracle.com/javase/7/docs/api/' ]
+      verbose = true
+    }
+  }
 
   configurations {
     provided {
@@ -201,7 +254,7 @@ subprojects {
 
     testOutput {
       extendsFrom testCompile
-      description  'a dependency that exposes test artifacts'
+      description 'a dependency that exposes test artifacts'
     }
   }
 
@@ -247,16 +300,6 @@ subprojects {
     }
   }
 
-  task jarTest (type: Jar, dependsOn: testClasses) {
-    description 'Assembles a jar archive of test classes.'
-    from sourceSets.test.output
-    classifier 'test'
-  }
-
-  artifacts {
-    testOutput jarTest
-  }
-
   sourceSets {
     main.compileClasspath += configurations.provided
     main.runtimeClasspath -= configurations.provided
@@ -267,14 +310,14 @@ subprojects {
   javadoc.classpath += configurations.provided
 
   dependencies {
-    provided 'com.google.code.findbugs:annotations:3.0.0'
+    compile 'com.google.code.findbugs:annotations:3.0.0'
     compile "log4j:log4j:${log4jVersion}"
     compile "org.slf4j:slf4j-api:${slf4jVersion}"
     compile "org.slf4j:slf4j-log4j12:${slf4jVersion}"
 
     testCompile "junit:junit:${junitVersion}"
-    testCompile 'org.hamcrest:hamcrest-core:1.1'
-    testCompile 'org.hamcrest:hamcrest-library:1.1'
+    testCompile 'org.hamcrest:hamcrest-core:1.3'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
     testCompile 'org.jmock:jmock:2.5.1'
     testCompile 'org.jmock:jmock-legacy:2.5.1'
     testCompile 'edu.umd.cs.mtc:multithreadedtc:1.01'
@@ -283,7 +326,10 @@ subprojects {
   }
 
   test {
-    //maxParallelForks = (2 * Runtime.getRuntime().availableProcessors())
+    dependsOn "${subprojectBase}product"
+    maxParallelForks = (2 * Runtime.getRuntime().availableProcessors())
+    minHeapSize = '768m'
+    maxHeapSize = '768m'
 
     include '**/*Test.class'
     exclude '**/*DUnitTest.class'
@@ -295,19 +341,33 @@ subprojects {
     }
 
     workingDir = "${testResultsBase}/junit"
-    delete workingDir
-    file(workingDir).mkdirs()
-    writeTestProperties(workingDir, '.')
+
+    binResultsDir = file("${workingDir}/binary/${project.name}")
+    reports.html.destination = file("${workingDir}/html/${project.name}")
+    reports.junitXml.destination = file(workingDir)
+  }
+  task distributedTest(type:Test) {
+    dependsOn "${subprojectBase}product"
+    maxParallelForks = Math.max((int)Math.sqrt(Runtime.getRuntime().availableProcessors() + 1) + 2, 2)
+    //maxParallelForks = 1
+    minHeapSize = '512m'
+    maxHeapSize = '512m'
+
+    include '**/*DUnitTest.class'
+    include '**/*DUnit.class'
+    exclude '**/pivotal/gemfirexd/wan/**/*DUnit.class'
+
+    workingDir = "${testResultsBase}/dunit"
 
     binResultsDir = file("${workingDir}/binary/${project.name}")
     reports.html.destination = file("${workingDir}/html/${project.name}")
     reports.junitXml.destination = file(workingDir)
 
-    // run each test in its own vm to avoid interference issues if a test doesn't clean up
-    // state
-    //forkEvery 1
+    //I'm hoping this might deal with SOME OOMEs I've seen
+    //forkEvery 30
   }
   task integrationTest(type:Test) {
+    dependsOn "${subprojectBase}product"
     maxParallelForks = (2 * Runtime.getRuntime().availableProcessors())
 
     include '**/*Test.class'
@@ -320,46 +380,19 @@ subprojects {
     }    
 
     workingDir = "${testResultsBase}/integration"
-    delete workingDir
-    file(workingDir).mkdirs()
-    writeTestProperties(workingDir, '.')
 
     binResultsDir = file("${workingDir}/binary/${project.name}")
     reports.html.destination = file("${workingDir}/html/${project.name}")
     reports.junitXml.destination = file(workingDir)
-
-    forkEvery 1
-  }
-  task distributedTest(type:Test) {
-    maxParallelForks = Runtime.getRuntime().availableProcessors()
-
-    include '**/*DUnitTest.class'
-    include '**/*DUnit.class'
-
-    workingDir = "${testResultsBase}/dunit"
-    delete workingDir
-    file(workingDir).mkdirs()
-    writeTestProperties(workingDir, '.')
-
-    binResultsDir = file("${workingDir}/binary/${project.name}")
-    reports.html.destination = file("${workingDir}/html/${project.name}")
-    reports.junitXml.destination = file(workingDir)
-
-    //I'm hoping this might deal with SOME OOMEs I've seen
-    forkEvery 30
   }
 
   // apply common test configuration
   gradle.taskGraph.whenReady( { graph ->
     tasks.withType(Test).each { test ->
-      check.dependsOn test
       test.configure {
         onlyIf { ! Boolean.getBoolean('skip.tests') }
 
-        minHeapSize '128m'
-        maxHeapSize '1g'
-        jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-XX:MaxPermSize=256M', '-ea']
-        maxParallelForks = 1
+        jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-XX:MaxPermSize=128M', '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC', '-XX:CMSInitiatingOccupancyFraction=50', '-XX:+CMSClassUnloadingEnabled', '-ea']
 
         testLogging.exceptionFormat = 'full'
 
@@ -367,9 +400,13 @@ subprojects {
           'gemfire.disallowMcastDefaults'  : 'true',
           'java.net.preferIPv4Stack'       : 'true',
           'jline.terminal'                 : 'scala.tools.jline.UnsupportedTerminal',
-          'gemfiretest.sourceDir'          : "${projectDir}/src/test/resources"
+          'store.test.resourceDir'         : "${projectDir}/src/test/resources",
+          'GEMFIREXD'                      : productDir.getAbsolutePath()
 
-        if (rootProject.name == 'gemfirexd-oss') {
+        environment 'GEMFIREXD'            : productDir.getAbsolutePath(),
+                    'JUNIT_JAR'            : sourceSets.test.output.classesDir
+
+        if (rootProject.name == 'snappy-store') {
           def eol = System.getProperty('line.separator')
           beforeTest { desc ->
             def now = new Date().format('yyyy-MM-dd HH:mm:ss.SSS Z')
@@ -380,7 +417,11 @@ subprojects {
           }
           onOutput { desc, event ->
             def output = new File(workingDir, "output.txt")
-            output  << event.message
+            def msg = event.message
+            if (event.destination.toString() == 'StdErr') {
+              msg = msg.replace("\n", "\n[error]  ")
+            }
+            output << msg
           }
           afterTest { desc, result ->
             def now = new Date().format('yyyy-MM-dd HH:mm:ss.SSS Z')
@@ -398,13 +439,93 @@ subprojects {
     }
   })
 
-  test.dependsOn subprojectBase + 'cleanStoreJUnit'
-  check.dependsOn integrationTest
+  test.dependsOn subprojectBase + 'cleanTestOutput'
+  distributedTest.dependsOn subprojectBase + 'cleanDUnitOutput'
+  integrationTest.dependsOn subprojectBase + 'cleanIntegrationOutput'
+  check.dependsOn test
   check.dependsOn distributedTest
+  check.dependsOn integrationTest
 }
 
-test.dependsOn subprojects.collect { p -> p.getTasksByName('test', false).collect { it.path } }
-check.dependsOn subprojects.collect { p -> p.getTasksByName('check', false).collect { it.path } }
+// maven publish tasks
+subprojects {
+
+  if (rootProject.name == 'snappy-store') {
+    task packageSources(type: Jar, dependsOn: classes) {
+      classifier = 'sources'
+      from sourceSets.main.allSource
+    }
+    task packageDocs(type: Jar, dependsOn: javadoc) {
+      classifier = 'javadoc'
+      from javadoc
+    }
+    task packageTests(type: Jar, dependsOn: testClasses) {
+      description 'Assembles a jar archive of test classes.'
+      from sourceSets.test.output.classesDir
+      classifier = 'tests'
+    }
+    artifacts {
+      testOutput packageTests
+    }
+  }
+  if (rootProject.hasProperty('enablePublish')) {
+    artifacts {
+      archives packageDocs, packageSources
+    }
+
+    uploadArchives {
+      repositories {
+        mavenDeployer {
+          beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+          repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+            authentication(userName: ossrhUsername, password: ossrhPassword)
+          }
+          snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+            authentication(userName: ossrhUsername, password: ossrhPassword)
+          }
+
+          pom.project {
+            name PRODUCT_NAME
+            packaging 'jar'
+            // optionally artifactId can be defined here
+            description 'SnappyData store based off Pivotal GemFireXD'
+            url 'http://www.snappydata.io'
+
+            scm {
+              connection 'scm:git:https://github.com/SnappyDataInc/snappy-store.git'
+              developerConnection 'scm:git:https://github.com/SnappyDataInc/snappy-store.git'
+              url 'https://github.com/SnappyDataInc/snappy-store'
+            }
+
+            licenses {
+              license {
+                name 'The Apache License, Version 2.0'
+                url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+              }
+            }
+
+            developers {
+              developer {
+                id 'smenon'
+                name 'Sudhir Menon'
+                email 'smenon@snappydata.io'
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+//test.dependsOn subprojects.collect { p -> p.getTasksByName('test', false).collect { it.path } }
+test.dependsOn subprojects.test
+check.dependsOn subprojects.check
+
+task distributedTest {
+  dependsOn subprojects.distributedTest
+}
 
 task combineReports(type: TestReport) {
   description 'Combines the test reports.'
@@ -416,34 +537,42 @@ gradle.taskGraph.whenReady({ graph ->
 })
 
 task generateSources {
+  dependsOn subprojectBase + 'gemfire-jgroups:jgMagic'
   dependsOn subprojectBase + 'gemfire-core:createVersionPropertiesFile'
-  dependsOn subprojectBase + 'gemfirexd:generateSources'
+  dependsOn subprojectBase + 'gemfirexd-core:compileJavacc'
+  dependsOn subprojectBase + 'gemfirexd-core:generatePropertiesFiles'
+  dependsOn subprojectBase + 'gemfire-core:createVersionPropertiesFile'
+  dependsOn subprojectBase + 'gemfirexd-shared:createVersionPropertiesFile'
+  dependsOn subprojectBase + 'gemfirexd-core:doSplit'
+  dependsOn subprojectBase + 'gemfirexd-client:generatePropertiesFiles'
+  dependsOn subprojectBase + 'gemfirexd-tools:compileJavacc'
+  dependsOn subprojectBase + 'gemfirexd-tools:generatePropertiesFiles'
 }
 
 def includeJar(def jarFile) {
   def jarName = jarFile.getName()
   return jarName.contains('jetty') || jarName.contains('spring') ||
-    jarName.contains('hbase') || jarName.contains('pxf') ||
-    jarName.contains('osgi') || jarName.contains('ant-') ||
-    jarName.contains('jline')
+    jarName.contains('hadoop') || jarName.contains('protobuf') ||
+    jarName.contains('jersey') || jarName.contains('jetty') ||
+    jarName.contains('hbase') || jarName.contains('jsr305') ||
+    jarName.contains('pxf') || jarName.contains('jline')
 }
 
 // pack the entire GemFireXD product tree
-task product(dependsOn: [ subprojectBase + 'gemfirexd:client:jar',
-    subprojectBase + 'gemfirexd:core:jar',
-    subprojectBase + 'gemfirexd:tools:jar',
-    subprojectBase + 'tests-sql:jar',
-    subprojectBase + 'gemfirexd:shared:javadoc',
-    subprojectBase + 'gemfirexd:core:javadoc' ]) << {
+task product(dependsOn: [ subprojectBase + 'gemfirexd-client:jar',
+    subprojectBase + 'gemfirexd-core:shadowJar',
+    subprojectBase + 'gemfirexd-tools:jar',
+    subprojectBase + 'gemfirexd-tests:jar',
+    subprojectBase + 'gemfirexd-shared:javadoc',
+    subprojectBase + 'gemfirexd-core:javadoc' ]) << {
 
-  def productDir = file("${rootProject.buildDir}/gfxd")
   delete productDir
 
-  def sharedProject = project(subprojectBase + 'gemfirexd:shared')
-  def clientProject = project(subprojectBase + 'gemfirexd:client')
+  def sharedProject = project(subprojectBase + 'gemfirexd-shared')
+  def clientProject = project(subprojectBase + 'gemfirexd-client')
   def gemcoreProject = project(subprojectBase + 'gemfire-core')
-  def coreProject = project(subprojectBase + 'gemfirexd:core')
-  def toolsProject = project(subprojectBase + 'gemfirexd:tools')
+  def coreProject = project(subprojectBase + 'gemfirexd-core')
+  def toolsProject = project(subprojectBase + 'gemfirexd-tools')
 
   def gcmDir = System.getProperty('GCMDIR', '/gcm')
 
@@ -458,7 +587,7 @@ task product(dependsOn: [ subprojectBase + 'gemfirexd:client:jar',
       include clientProject.jar.archiveName
     }
     from(coreProject.jar.destinationDir) {
-      include coreProject.jar.archiveName
+      include coreProject.shadowJar.archiveName
     }
     from(toolsProject.jar.destinationDir) {
       include toolsProject.jar.archiveName
@@ -499,7 +628,7 @@ task product(dependsOn: [ subprojectBase + 'gemfirexd:client:jar',
 
   // examples, javadocs, vsd
   copy {
-    from(project(subprojectBase + 'gemfirexd').projectDir.getAbsolutePath() + '/examples') {
+    from(project(subprojectBase + 'gemfirexd-core').projectDir.getAbsolutePath() + '/../examples') {
       exclude 'src/main/java/mapreduce/README.txt'
       exclude 'src/main/java/mapreduce/pom.xml'
     }
@@ -510,7 +639,7 @@ task product(dependsOn: [ subprojectBase + 'gemfirexd:client:jar',
     into "${productDir}/examples"
   }
   copy {
-    from(project(subprojectBase + 'gemfirexd').projectDir.getAbsolutePath() + '/examples') {
+    from(project(subprojectBase + 'gemfirexd-core').projectDir.getAbsolutePath() + '/../examples') {
       include 'src/main/java/mapreduce/README.txt'
       include 'src/main/java/mapreduce/pom.xml'
     }
@@ -520,7 +649,7 @@ task product(dependsOn: [ subprojectBase + 'gemfirexd:client:jar',
     }
   }
   copy {
-    from project(subprojectBase + 'gemfirexd').projectDir.getAbsolutePath() + '/quickstart'
+    from project(subprojectBase + 'gemfirexd-core').projectDir.getAbsolutePath() + '/../quickstart'
     into "${productDir}/quickstart"
   }
   copy {
